--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "format": "prettier --write --plugin-search-dir=. ./src/**/*{.js,.svelte,.html}"
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "prettier": "^2.3.1",
+    "prettier-plugin-svelte": "^2.3.1",
     "svelte": "^3.34.0"
   },
   "type": "module",
